<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>Cucumber-Project</groupId>
	<artifactId>Cucumber-Project</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>CucumberProject</name>
	<url>http://maven.apache.org</url>

	<properties>
<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
<maven.compile.encoding>UTF-8</maven.compile.encoding>
<!-- <maven.test.skip>true</maven.test.skip> -->
	</properties>


<!--<profiles>

        <profile>
            <id>dev</id>
            <activation>
                &lt;!&ndash; this profile is active by default &ndash;&gt;
                <activeByDefault>true</activeByDefault>
                &lt;!&ndash; activate if system properties 'env=dev' &ndash;&gt;
                <property>
                    <name>env</name>
                    <value>dev</value>
                </property>
            </activation>
            <properties>
                <db.driverClassName>com.mysql.jdbc.Driver</db.driverClassName>
                <db.url>jdbc:mysql://localhost:3306/dev</db.url>
                <db.username>mkyong</db.username>
                <db.password>vignesh@2205</db.password>
            </properties>
        </profile>

        <profile>
            <id>prod</id>
            <activation>
                &lt;!&ndash; activate if system properties 'env=prod' &ndash;&gt;
                <property>
                    <name>env</name>
                    <value>prod</value>
                </property>
            </activation>
            <properties>
                <db.driverClassName>com.mysql.jdbc.Driver</db.driverClassName>
                <db.url>jdbc:mysql://live01:3306/prod</db.url>
                <db.username>mkyong</db.username>
                <db.password>vicky2205</db.password>
            </properties>
        </profile>

    </profiles>-->

 

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->

		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.8.0</version>
			<!--<scope>test</scope>-->
		</dependency>



		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.4.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20230227</version>
		</dependency>


<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
<dependency>
    <groupId>com.googlecode.json-simple</groupId>
    <artifactId>json-simple</artifactId>
    <version>1.1.1</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
<dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi-ooxml</artifactId>
    <version>4.1.2</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
<dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi</artifactId>
    <version>4.1.2</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
<dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi-ooxml-schemas</artifactId>
    <version>4.1.2</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.apache.poi/ooxml-schemas -->
<dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>ooxml-schemas</artifactId>
    <version>1.4</version>
</dependency>


		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.9</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>7.12.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>7.12.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-gherkin -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-gherkin</artifactId>
			<version>7.12.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>gherkin</artifactId>
			<version>26.0.3</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.10.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>7.12.1</version>
			<scope>test</scope>
		</dependency>


		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<!--<scope>test</scope>-->
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm-deps -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.6</version>
			<scope>test</scope>
		</dependency>

		<!--<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>test</scope>
		</dependency>-->
		
		<dependency>
			<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-testng</artifactId>
				<version>7.12.1</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>5.7.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.9.3</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
	
	  <!-- map ${} variable -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
	
	
	 <pluginManagement>
		<plugins>
		
		
	<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-help-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>show-profiles</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>active-profiles</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>

				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4</version>
			</plugin>
			
<!-- Run as Maven test
1)Include runner class file under include tag in surefire plugin/ or set in testng file and enable junit attribute to true
 and then set the filepath in surefire plugin under suitexmlfiles -->
 
			<!-- Use surefire code in pom_parallel file to run test runner in parallel mode -->
			 <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-surefire-plugin</artifactId>
				 <version>3.0.0</version>

				<configuration>
				 <useSystemClassLoader>false</useSystemClassLoader>
				 <testFailureIgnore>true</testFailureIgnore>
				  <includes>
                        <include>**/*Test.java</include>
                    </includes>
					<!-- <suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles> -->
				</configuration>
			</plugin>  
			 
			 <!-- Running cucumber test in parallel -->
		<!-- 	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<configuration>
				 <forkCount>2</forkCount>
                 <reuseForks>true</reuseForks>
                 <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				 <testFailureIgnore>true</testFailureIgnore>
				  <includes>
                        <include>**/*Runner.java</include>
                    </includes>
                    <suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
                    <reportsDirectory>target/surefire-reports-${surefire.forkNumber}</reportsDirectory>
				</configuration>
			</plugin>
			 -->
			
<!--			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>3.15.0</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>Cucumber-Project_ExtentReport</projectName>  &lt;!&ndash; Replace with project name &ndash;&gt;
							<outputDirectory>target/Cucumber-reports/advanced-reports</outputDirectory>
							<cucumberOutput>target/Cucumber-reports/CucumberTestReport.json</cucumberOutput>
							<testFailureIgnore>true</testFailureIgnore>
							<checkBuildResult>true</checkBuildResult>
							<skippedFails>true</skippedFails>
                            <enableFlashCharts>true</enableFlashCharts>
							<buildNumber>1</buildNumber>
							<parallelTesting>false</parallelTesting>
						</configuration>
					</execution>
				</executions>
			</plugin>-->
		</plugins>
		
		 </pluginManagement>
	</build>
</project>
